# pmd

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  ROADMAP.md
.github/: copilot-instructions.md
.github/agents/: discovery.agent.md  membership.agent.md  networking.agent.md  protocol.agent.md  tls.agent.md
.github/instructions/: discovery.instructions.md  protocol.instructions.md  rust.instructions.md  testing.instructions.md  tls.instructions.md
.github/prompts/: implement.prompt.md  new-message.prompt.md  new-plugin.prompt.md  review.prompt.md
.github/workflows/: release.yml
contrib/: pmd.service
crates/pmd/: Cargo.toml  README.md
crates/pmd-azure/: Cargo.toml  README.md
crates/pmd-azure/src/: lib.rs  plugin.rs
crates/pmd-broadcast/: Cargo.toml
crates/pmd-broadcast/src/: lib.rs  plugin.rs
crates/pmd-discovery/: Cargo.toml
crates/pmd-discovery/src/: lib.rs
crates/pmd/src/: cli.rs  config.rs  main.rs  protocol.rs  tls.rs
crates/pmd/src/daemon/: control.rs  failure_detector.rs  membership.rs  metrics.rs  mod.rs  peer.rs  server.rs
examples/: Cargo.toml  broadcast_discovery.rs  cluster_10.sh  pmd_client.js
