[package]
name = "pmd-broadcast"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
pmd-discovery = { path = "../pmd-discovery" }
tokio = { version = "1", features = ["net", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
