[package]
name = "portmapd-broadcast"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "UDP broadcast discovery plugin for portmapd"
repository = "https://github.com/pierreg256/pmd"
keywords = ["distributed", "discovery", "broadcast", "udp"]
categories = ["network-programming"]

[dependencies]
portmapd-discovery = { version = "0.1.0", path = "../pmd-discovery" }
tokio = { version = "1", features = ["net", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
