[package]
name = "portmapd-broadcast"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UDP broadcast discovery plugin for portmapd"
repository.workspace = true
keywords = ["distributed", "discovery", "broadcast", "udp"]
categories = ["network-programming"]

[dependencies]
portmapd-discovery = { path = "../pmd-discovery" }
tokio = { version = "1", features = ["net", "time", "sync", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
socket2 = { version = "0.5", features = ["all"] }
