[package]
name = "portmapd-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Discovery plugin trait for portmapd — distributed node membership daemon"
repository.workspace = true
keywords = ["distributed", "membership", "discovery", "plugin"]
categories = ["network-programming"]

[dependencies]
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
