[package]
name = "portmapd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Distributed node membership daemon inspired by Erlang EPMD — CRDT-based, TLS-encrypted, plugin discovery"
repository.workspace = true
keywords = ["distributed", "membership", "crdt", "epmd", "daemon"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "pmd"
path = "src/main.rs"

[dependencies]
portmapd-discovery = { version = "0.2.1", path = "../pmd-discovery" }
portmapd-broadcast = { version = "0.2.1", path = "../pmd-broadcast" }

concordat = "0.1"

tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
daemonize = "0.5"
dirs = "6"
toml = "0.8"
local-ip-address = "0.6"
